--- a/global-overlay-scrollbars.user.css
+++ b/global-overlay-scrollbars.user.css
@@ -14,6 +14,25 @@
 @advanced color custom-track-color            "Scrollbar track color" transparent
 @advanced text webkit-scrollbar-width-height  "Webkit scrollbar width/height" 6px
 @advanced text webkit-scrollbar-border-radius "Webkit scrollbar border radius" 0px
+@advanced checkbox workaround-gh-scrollbars   "Enable GitHub workaround scrollbars" 0 {
+  Enabled "Enabled" <<<EOT
+  /* GitHub https://github.com/StylishThemes/GitHub-Dark/issues/870 *\/
+  .integrations-select-repos::-webkit-scrollbar {
+    max-width: var(--webkit-scrollbar-width-height) !important;
+    width: var(--webkit-scrollbar-width-height) !important;
+  }
+  .integrations-select-repos::-webkit-scrollbar-thumb {
+    background: var(--custom-thumb-color) !important;
+    border: 0 !important;
+    border-radius: var(--webkit-scrollbar-border-radius) !important;
+    box-shadow: none !important;
+  }
+  .integrations-select-repos::-webkit-scrollbar-track-piece {
+    background: var(--custom-track-color) !important;
+  }EOT;
+  Disabled "Disabled" <<<EOT
+  EOT;
+}
 ==/UserStyle== */
 :root {
   --custom-track-color: /*[[custom-track-color]]*/;
